# OpenRAG

./: .env.example  AGENTS.md  README-CS.md  README-DE.md  README.md  setup.sh
apps/backend/: .dockerignore  .env.example.backend  Dockerfile  alembic.ini  celerybeat-schedule  entrypoint.sh  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/routes/: projects.py
apps/backend/app/core/: config.py  crypto.py
apps/backend/app/db/migrations/: README
apps/backend/app/db/migrations/versions/: 20260225_000001_initial.py  20260225_000002_embeddings_profiles_reindex.py
apps/backend/app/db/models/: document.py  enums.py  user.py
apps/backend/app/schemas/: projects.py
apps/backend/app/services/: project_service.py
apps/backend/app/telemetry/: metrics.py
apps/backend/app/workers/: celery_app.py
apps/frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/frontend/src/components/: AppNavDrawer.tsx  TopHeader.tsx  appNavigation.ts
apps/frontend/src/pages/: LoginPage.tsx  ProjectAccessPage.tsx
apps/frontend/src/routes/: AppRouter.tsx
docs/: rbac.md
infra/compose/: compose.prod-like.yaml  compose.yaml
infra/grafana/dashboards/: airagchat-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
samples/documents/: hello-rag.md
