[project]
name = "openrag-backend"
version = "0.1.0"
description = "OpenRAG FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "argon2-cffi>=23.1.0",
  "celery[redis]>=5.4.0",
  "cryptography>=43.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "passlib[argon2]>=1.7.4",
  "prometheus-client>=0.20.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pypdf>=4.3.1",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "pyjwt>=2.9.0",
  "qdrant-client>=1.10.1",
  "redis>=5.0.7",
  "SQLAlchemy>=2.0.31",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.30.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
